@@ -1,6 +1,7 @@
 // pkg_info_screen.h     -*-c++-*-
 //
 //  Copyright 2000, 2005 Daniel Burrows
+//  Copyright 2015 Manuel A. Fernandez Montecelo
 //
 //  This program is free software; you can redistribute it and/or modify
 //  it under the terms of the GNU General Public License as published by
