@@ -27,6 +27,8 @@ Version 0.7.5 UNRELEASED
 
   * [cmdline] Minor improvements to help (Closes: #497136)
 
+  * [curses] Show Origin and URI in pkg info screen (Closes: #294040, #611515)
+
   * Print useful message when package lists are out of date (Closes: #758764)
 
 - Internal changes:
